<resources>
    <string name="app_name">ProyectoFinal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_on">Registrarse</string>
    <string name="welcome">Bienvenido !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="register_title">Registrate</string>
    <string name="register_name">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_email">Correo electrónico</string>
    <string name="register_passwd">Contraseña</string>
    <string name="register_passwd_confirm">Confirmar contraseña</string>
    <string name="btnRegister">Aceptar</string>
    <string name="register_subTitle">Únete a esta experiencia</string>
    <string name="btnCancel">Cancelar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Equipo 6</string>
    <string name="nav_header_subtitle">Proyecto final</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="headerAbout">¿Qué es letterboxd?</string>
    <string name="subHeaderAbout">Letterboxd es una plataforma en línea diseñada específicamente para los amantes del cine. Funciona como una red social centrada en películas, donde los usuarios pueden descubrir, calificar y revisar sus películas favoritas.</string>
    <string name="header2About">Explorar y descubrir películas</string>
    <string name="subHeader2About">Los usuarios de Letterboxd tienen varias opciones para explorar y descubrir películas de su interés.
    Dirigete a la pantalla de inicio para que puedas filtar películas por categoría.
    </string>

    <string name="tab1">Ciencia ficción</string>
    <string name="tab2">Terror</string>
    <string name="tab3">Animado</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Mi información</string>
    <string name="menu_logOff">Cerrar sesión</string>
    <string name="menu_about">Ayuda</string>
</resources>