<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_contact_page"
            android:title="@string/menu_slideshow" />
        <item android:title="">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_baseline_help"
                        android:title="@string/menu_about" />
                    <item
                        android:id="@+id/nav_logOff"
                        android:icon="@drawable/ic_baseline_exit_to_app"
                        android:title="@string/menu_logOff" />
                </group>
            </menu>
        </item>
    </group>
</menu>