<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.equipo6.proyectofinal.ui.gallery.GalleryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.equipo6.proyectofinal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.equipo6.proyectofinal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.equipo6.proyectofinal.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_logOff"
        android:name="com.equipo6.proyectofinal.ui.logOff.LogOffFragment"
        android:label="@string/menu_logOff"
        tools:layout="@layout/fragment_log_off" />
</navigation>