<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.about.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/headerAbout"
        android:fontFamily="@font/opensans_bold"
        android:textSize="28sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/opensans_semibold"
        android:justificationMode="inter_word"
        android:text="@string/subHeaderAbout"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:text="@string/header2About"
        android:fontFamily="@font/opensans_bold"
        android:textSize="28sp"
        tools:ignore="SpeakableTextPresentCheck">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:autofillHints=""
        android:fontFamily="@font/opensans_semibold"
        android:justificationMode="inter_word"
        android:text="@string/subHeader2About"
        android:textSize="17sp" >
    </TextView>

</LinearLayout>