<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register_title"
        android:fontFamily="@font/opensans_bold"
        android:textColor="@color/purple_700"
        android:textSize="38sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_subTitle"
        android:fontFamily="@font/opensans_semibold"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/register_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/register_passwd"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/register_passwd_confirm"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="158dp"
            android:layout_height="54dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/btnRegister"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="158dp"
            android:layout_height="54dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_below="@+id/btn_register"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="107dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="109dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:text="@string/btnCancel"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />
    </RelativeLayout>
</LinearLayout>